Airdropping page complete

--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -21,28 +21,50 @@ Please note that the airdropping process is identical for both tickets and membe
         Click the "Airdrop" button on the target ticket type/membership tier.
         
         Select "Upload .CSV" if there are a large number of people that you will be airdropping the ticket/membership to, and "Manual" for a smaller quantity.
+        <img src="/images/distribution/airdropping/choose flow.gif"/>
         <AccordionGroup>
             <Accordion title="CSV (Bulk Import)">
                 <Steps>
                     <Step title="Download the CSV template">
+                        <img src="/images/distribution/airdropping/download template.webp"/>
                     </Step>
                     <Step title="Add Recipients">
+                        Open the template in a spreadsheet editor. Following the template format, input the email addresses of the recipients.
+                        <Info>
+                            Please note that the maximum number of recipients per airdrop is 100.
+                        </Info>
                     </Step>
                     <Step title="Upload the CSV">
+                        Upload the edited CSV file and click "Next" to complete the upload.
+                        <img src="/images/distribution/airdropping/upload csv.webp"/>
                     </Step>
                     <Step title="Confirm Recipient Addresses">
+                        A message will appear asking you to validate the recipients' email addresses. When you have verified that the listed addresses are correct, click "Confirm" to send an invitation to the target recipients.
+                        <img src="/images/distribution/airdropping/confirm addresses.webp"/>
                     </Step>
                     <Step title="Confirm Successful Import">
+                        <img src="/images/distribution/airdropping/confirm import.webp"/>
+                        Click "Check Airdrop" on the subsequent message to view the list of airdrop recipients. This information can also be accessed from the target event/membership's dashboard at any time.
+                        <img src="/images/distribution/airdropping/view recipients.webp"/>
+                        A value in the wallet and holder wallet fields indicates that the recipient has successfully claimed their airdropped ticket/membership.
                     </Step>
                 </Steps>
             </Accordion>
             <Accordion title="Manual">
                 <Steps>
                     <Step title="Add Recipients">
+                        Click "Add Recipient" and enter a target recipient's email address. Repeat as appropriate for additional recipients and save when complete.
+                        <img src="/images/distribution/airdropping/manual add recipients.gif"/>
                     </Step>
                     <Step title="Confirm Recipient Addresses">
+                        A message will appear asking you to validate the recipients' email addresses. When you have verified that the listed addresses are correct, click "Confirm" to send an invitation to the target recipients.
+                        <img src="/images/distribution/airdropping/confirm addresses.webp"/>
                     </Step>
                     <Step title="Confirm Successful Import">
+                        <img src="/images/distribution/airdropping/confirm import.webp"/>
+                        Click "Check Airdrop" on the subsequent message to view the list of airdrop recipients. This information can also be accessed from the target event/membership's dashboard at any time.
+                        <img src="/images/distribution/airdropping/view recipients.webp"/>
+                        A value in the wallet and holder wallet fields indicates that the recipient has successfully claimed their airdropped ticket/membership.
                     </Step>
                 </Steps>                
             </Accordion>
