Check-in skeleton

--- a/distribution/airdropping.mdx
+++ b/distribution/airdropping.mdx
@@ -4,7 +4,9 @@ title: 'Airdropping'
 
 Airdropping refers to the distribution of a free NFT to a targeted audience. Moongate supports airdropping via email addresses.
 
-Please note that the airdropping process is identical for both tickets and memberships.
+<Tip>
+    The airdropping process is identical for both tickets and memberships.
+</Tip>
 
 <Steps>
     <Step title="Sign into the Moongate Merchant Portal">
