--- a/distribution/discountpromocode.mdx
+++ b/distribution/discountpromocode.mdx
@@ -2,7 +2,9 @@
 title: 'Discount and Promo Codes'
 ---
 
-Please note that the process of creating and implementing discounts and promo codes is identical for both tickets and memberships..
+<Info>
+    The process of creating and implementing discounts and promo codes is identical for both tickets and memberships.
+</Info>
 
 
 <Steps>
