check-in guide complete?

--- a/check-in/check-in-guide.mdx
+++ b/check-in/check-in-guide.mdx
@@ -12,6 +12,7 @@ Download the Moongate Verify App – you will use this app to check your guests 
 <Steps>
     <Step title="Log into the Moongate Verify App">
         You'll need your event's access code, which is located in the corresponding event's dashboard page in the portal.
+        <img src="images/check-in-guide/code location.png"/>
     </Step>
     <Step title="Choose the Target Event">
     </Step>
@@ -22,7 +23,7 @@ Download the Moongate Verify App – you will use this app to check your guests 
     </Step>
     <Step title="Check the Attendee's Eligibility">
         Verification results:
-
+        <img src="images/check-in-guide/verification msgs.png"/>
     </Step>
 </Steps>
 
