reducing step numbers

--- a/benefits/createbenefitprgrm.mdx
+++ b/benefits/createbenefitprgrm.mdx
@@ -8,12 +8,8 @@ In order to create and distribute a benefit, you must first create an associated
   <Step title="Sign into the Moongate Merchant Portal">
     [https://portal.moongate.id/](https://portal.moongate.id/)
   </Step>
-  <Step title="Navigate to the 'Benefits' tab">
-    <img width="218" height="422" src="/images/creating-campaign/ticketing/creating an event/Event Sidebar Location.png"/>
-    [https://portal.moongate.id/events](https://portal.moongate.id/events)
-  </Step>
-  <Step title="Click 'Create'">
-    <img src="/images/creating-campaign/ticketing/creating an event/Create Event Button Location.png"/>
+  <Step title="Navigate to the 'Benefits' tab" and click 'Create'>
+    [https://portal.moongate.id/benefits](https://portal.moongate.id/benefits)
   </Step>
   <Step title="Add basic benefit campaign information">
     Enter the title of the benefit campaign, the URL, your description and featured image for the campaign, claiming period, currency used to purchase premium benefits (if any), and information about your brand.
