--- a/creating-campaign/membership/creatememprogram.mdx
+++ b/creating-campaign/membership/creatememprogram.mdx
@@ -5,13 +5,10 @@ title: 'Creating a Membership Program'
     <Step title="Sign into the Moongate Merchant Portal.">
         [https://portal.moongate.id/](https://portal.moongate.id/)
     </Step>
-    <Step title="Navigate to the 'Memberships' Tab.">
+    <Step title="Navigate to the 'Memberships' tab" and click 'Create'>
         [https://portal.moongate.id/events](https://portal.moongate.id/memberships)
-        <img src="/images/creating-campaign/membership/creating program/Membership Tab Location.png"/>
-    </Step>
-    <Step title="Click 'Create'">
         <img src="/images/creating-campaign/membership/creating program/Create Button Location.png"/>
-    </Step>
+    </Step>    
     <Step title="Add Basic Membership Program Information">
         Enter the title of the membership program, the URL, currency used to purchase membership, and information about your brand.
         <img src="/images/creating-campaign/membership/creating program/Basic Membership Info.webp"/>
