--- a/creating-campaign/ticketing/createevent.mdx
+++ b/creating-campaign/ticketing/createevent.mdx
@@ -8,11 +8,8 @@ Before you can create and issue tickets, you must first create a corresponding e
   <Step title="Sign into the Moongate Merchant Portal">
     [https://portal.moongate.id/](https://portal.moongate.id/)
   </Step>
-  <Step title="Navigate to the 'Event' Tab">
-    <img width="218" height="422" src="/images/creating-campaign/ticketing/creating an event/Event Sidebar Location.png"/>
+  <Step title="Navigate to the 'Event' Tab" and click 'Create'>
     [https://portal.moongate.id/events](https://portal.moongate.id/events)
-  </Step>
-  <Step title="Click 'Create'">
     <img src="/images/creating-campaign/ticketing/creating an event/Create Event Button Location.png"/>
   </Step>
   <Step title="Add basic information for your event">
