--- a/benefits/createbenefitprgrm.mdx
+++ b/benefits/createbenefitprgrm.mdx
@@ -8,7 +8,7 @@ In order to create and distribute a benefit, you must first create an associated
   <Step title="Sign into the Moongate Merchant Portal">
     [https://portal.moongate.id/](https://portal.moongate.id/)
   </Step>
-  <Step title="Navigate to the 'Benefits' tab" and click 'Create'>
+  <Step title="Navigate to the 'Benefits' tab" and click 'Create'">
     [https://portal.moongate.id/benefits](https://portal.moongate.id/benefits)
   </Step>
   <Step title="Add basic benefit campaign information">
