--- a/creating-campaign/membership/creatememprogram.mdx
+++ b/creating-campaign/membership/creatememprogram.mdx
@@ -5,7 +5,7 @@ title: 'Creating a Membership Program'
     <Step title="Sign into the Moongate Merchant Portal.">
         [https://portal.moongate.id/](https://portal.moongate.id/)
     </Step>
-    <Step title="Navigate to the 'Memberships' tab" and click 'Create'>
+    <Step title="Navigate to the 'Memberships' tab and click 'Create'">
         [https://portal.moongate.id/events](https://portal.moongate.id/memberships)
         <img src="/images/creating-campaign/membership/creating program/Create Button Location.png"/>
     </Step>    
