--- a/creating-campaign/ticketing/createevent.mdx
+++ b/creating-campaign/ticketing/createevent.mdx
@@ -8,7 +8,7 @@ Before you can create and issue tickets, you must first create a corresponding e
   <Step title="Sign into the Moongate Merchant Portal">
     [https://portal.moongate.id/](https://portal.moongate.id/)
   </Step>
-  <Step title="Navigate to the 'Event' Tab" and click 'Create'>
+  <Step title="Navigate to the 'Event' Tab" and click 'Create'">
     [https://portal.moongate.id/events](https://portal.moongate.id/events)
     <img src="/images/creating-campaign/ticketing/creating an event/Create Event Button Location.png"/>
   </Step>
