--- a/benefits/createbenefit.mdx
+++ b/benefits/createbenefit.mdx
@@ -1,3 +1,62 @@
 ---
 title: 'Creating a Benefit'
 ---
+
+<Steps>
+  <Step title="Click '② Benefits'">
+  </Step>
+  <Step title="Click 'Add Benefit'">
+    Click "Add" to create a new benefit.
+    <img src="/images/creating-campaign/ticketing/creating tickets/Add Tix Button Location.png"/>
+    <Info>
+        Moongate automatically generates a placeholder benefit titled "Reward 1" upon the creation of a campaign. A benefit campaign must have at least one benefit associated with it, so feel free to delete this placeholder benefit after creating a benefit of your own.
+    </Info>
+  </Step>
+  <Step title="Add benefit name">
+    Enter the name of this benefit. Additional benefits can always be added to the campaign later.
+    <img src="/images/creating-campaign/ticketing/creating tickets/Tix Name Field.png"/>
+  </Step>
+  <Step title="Add benefit details">
+    Select the reward type, instructions for redemption, text that will be displayed upon claiming it (for generic reveal option only), and price.
+    <img src="/images/creating-campaign/ticketing/creating tickets/Add Tix Img and Desc.png"/>
+    <Tip>
+            Set the price to 0 if the membership tier is free to join.
+    </Tip>
+    <Tip>
+            To change the currency type, return to "① Info" in the sidebar and change the value in the "Currency" field.
+    </Tip>
+    <Tabs>
+        <Tab title="Generic Reveal">        
+        </Tab>
+        <Tab title="URL">            
+        </Tab>
+        <Tab title="Code">
+        </Tab>
+    </Tabs>
+  </Step>
+  <Step title="Specify advanced options (Optional)">
+    If applicable, specify the maximum number of available tickets of this ticket type, as well as whether the 
+    ticket type should be invisible to users on the event page.
+    <img src= "/images/creating-campaign/ticketing/creating tickets/Tix Price Sales Period.png"/>
+    <Info>
+        To gate benefits by NFT ownership or Email/Wallet addresses, please refer to [this guide](/benefits/gating.mdx).
+    </Info>
+    When you are ready, click "Save" to close the ticket details window, then click "Next."
+  </Step>
+  <Step title="Add questions (Optional)">
+    <img src="/images/creating-campaign/ticketing/creating tickets/Add Qs.gif"/>
+    If desired, add questions to collect information from users who are purchasing tickets. These questions 
+    will be shown to users during checkout.
+    <img src="/images/creating-campaign/ticketing/creating tickets/Qs.png"/>
+    Responses can be viewed from the event's Sales tab, located in the event dashboard.
+    <img src="/images/creating-campaign/ticketing/creating tickets/Reponses.gif"/>
+  </Step>
+  <Step title="Specify payment options">
+    Select a payment option if applicable. Moongate supports both credit cards and crypto options. **Please contact us if you will be collecting payment for your event.**
+    <img src="/images/creating-campaign/ticketing/creating tickets/Payment Options.png"/>
+  </Step>
+  <Step title="Launch Your Benefit">
+    Once you have finalized your event and ticket details, click "Publish" to launch your benefit campaign.
+    <img src="/images/creating-campaign/ticketing/creating tickets/Publish Button Location.png"/>
+  </Step>
+</Steps>
