--- a/benefits/createbenefitprgrm.mdx
+++ b/benefits/createbenefitprgrm.mdx
@@ -8,7 +8,7 @@ In order to create and distribute a benefit, you must first create an associated
   <Step title="Sign into the Moongate Merchant Portal">
     [https://portal.moongate.id/](https://portal.moongate.id/)
   </Step>
-  <Step title="Navigate to the 'Benefits' tab and click 'Create'">
+  <Step title="Navigate to the 'Benefit' tab and click 'Create'">
     [https://portal.moongate.id/benefits](https://portal.moongate.id/benefits)
     <img src="/images/benefits/createbenefitprgrm/create button location.png"/>
   </Step>
@@ -23,7 +23,9 @@ In order to create and distribute a benefit, you must first create an associated
         your campaign's URL **cannot be changed after publication.** Be sure to double-check it
         before activation.
     </Warning>
-    When you are ready, scroll to the end of the page and click 'Next'. You are now ready to [create a benefit](/benefits/createbenefit)!
+    When you are ready, scroll to the end of the page and click 'Next'.
+    
+    Your benefit campaign has not yet been launched yet! You'll have to [create a benefit](/benefits/createbenefit) first.
     <Tip>
         Tip: Clicking "Next" will save your work. You can also click "Save Draft" at any point
         to save your work and return to it later.  
