--- a/benefits/createbenefit.mdx
+++ b/benefits/createbenefit.mdx
@@ -3,22 +3,20 @@ title: 'Creating a Benefit'
 ---
 
 <Steps>
-  <Step title="Click '② Benefits'">
-  </Step>
-  <Step title="Click 'Add Benefit'">
-    Click "Add" to create a new benefit.
-    <img src="/images/creating-campaign/ticketing/creating tickets/Add Tix Button Location.png"/>
+  <Step title="Add a new benefit"></Step>
+    Within the target benefit campaign's page, click '② Benefits' and then 'Add Benefit' to create a new benefit.    
+    <img src="/images/benefits/create-benefit/add button location.png"/>
     <Info>
         Moongate automatically generates a placeholder benefit titled "Reward 1" upon the creation of a campaign. A benefit campaign must have at least one benefit associated with it, so feel free to delete this placeholder benefit after creating a benefit of your own.
     </Info>
   </Step>
   <Step title="Add benefit name">
     Enter the name of this benefit. Additional benefits can always be added to the campaign later.
-    <img src="/images/creating-campaign/ticketing/creating tickets/Tix Name Field.png"/>
+    <img src="/images/benefits/create-benefit/benefit name.png"/>
   </Step>
   <Step title="Add benefit details">
     Select the reward type, instructions for redemption, text that will be displayed upon claiming it (for generic reveal option only), and price.
-    <img src="/images/creating-campaign/ticketing/creating tickets/Add Tix Img and Desc.png"/>
+    <img src="/images/benefits/create-benefit/add reward details.gif"/>
     <Tip>
             Set the price to 0 if the membership tier is free to join.
     </Tip>
@@ -26,37 +24,49 @@ title: 'Creating a Benefit'
             To change the currency type, return to "① Info" in the sidebar and change the value in the "Currency" field.
     </Tip>
     <Tabs>
-        <Tab title="Generic Reveal">        
+        <Tab title="Generic Reveal">
+            <img src="/images/benefits/create-benefit/generic reveal.png"/>
+            <Frame caption="How users will see your benefit upon claiming it">
+                <img src="/images/benefits/create-benefit/generic reveal msg.png"/>
+            </Frame>
         </Tab>
-        <Tab title="URL">            
+        <Tab title="URL">    
+            <img src="/images/benefits/create-benefit/url benefit.png"/>
+            <Frame caption="How users will see your benefit upon claiming it">
+                <img src="/images/benefits/create-benefit/url msg.png"/>
+            </Frame>        
         </Tab>
         <Tab title="Code">
+            <img src="/images/benefits/create-benefit/code benefit.png"/>
+            <Frame caption="How users will see your benefit upon claiming it">
+                <img src="/images/benefits/create-benefit/code msg.png"/>
+            </Frame>
         </Tab>
     </Tabs>
   </Step>
   <Step title="Specify advanced options (Optional)">
     If applicable, specify the maximum number of available tickets of this ticket type, as well as whether the 
     ticket type should be invisible to users on the event page.
-    <img src= "/images/creating-campaign/ticketing/creating tickets/Tix Price Sales Period.png"/>
+    <img src= "/images/benefits/create-benefit/advance toggle.png"/>
     <Info>
-        To gate benefits by NFT ownership or Email/Wallet addresses, please refer to [this guide](/benefits/gating.mdx).
+        To gate benefits by NFT ownership or Email/Wallet addresses, please refer to [this guide](/benefits/gating).
     </Info>
-    When you are ready, click "Save" to close the ticket details window, then click "Next."
+    When you are ready, click "Save" to close the Benefit Option window, then click "Next."
   </Step>
   <Step title="Add questions (Optional)">
-    <img src="/images/creating-campaign/ticketing/creating tickets/Add Qs.gif"/>
-    If desired, add questions to collect information from users who are purchasing tickets. These questions 
+    <img src= "/images/benefits/create-benefit/add Qs.gif"/>
+    If desired, add questions to collect information from users who are joining your benefit campaign. These questions 
     will be shown to users during checkout.
-    <img src="/images/creating-campaign/ticketing/creating tickets/Qs.png"/>
+    <img src= "/images/benefits/create-benefit/Qs.webp"/>
     Responses can be viewed from the event's Sales tab, located in the event dashboard.
-    <img src="/images/creating-campaign/ticketing/creating tickets/Reponses.gif"/>
+    <img src= "/images/benefits/create-benefit/responses.gif"/>
   </Step>
   <Step title="Specify payment options">
     Select a payment option if applicable. Moongate supports both credit cards and crypto options. **Please contact us if you will be collecting payment for your event.**
-    <img src="/images/creating-campaign/ticketing/creating tickets/Payment Options.png"/>
+    <img src= "/images/benefits/create-benefit/payment.png"/>
   </Step>
   <Step title="Launch Your Benefit">
     Once you have finalized your event and ticket details, click "Publish" to launch your benefit campaign.
-    <img src="/images/creating-campaign/ticketing/creating tickets/Publish Button Location.png"/>
+    <img src="/images/benefits/create-benefit/publish button location.avif"/>
   </Step>
 </Steps>
