--- a/benefits/createbenefit.mdx
+++ b/benefits/createbenefit.mdx
@@ -3,7 +3,7 @@ title: 'Creating a Benefit'
 ---
 
 <Steps>
-  <Step title="Add a new benefit"></Step>
+  <Step title="Add a new benefit">
     Within the target benefit campaign's page, click '② Benefits' and then 'Add Benefit' to create a new benefit.    
     <img src="/images/benefits/create-benefit/add button location.png"/>
     <Info>
