--- a/benefits/createbenefit.mdx
+++ b/benefits/createbenefit.mdx
@@ -12,7 +12,7 @@ title: 'Creating a Benefit'
   </Step>
   <Step title="Add benefit name">
     Enter the name of this benefit. Additional benefits can always be added to the campaign later.
-    <img src="/images/benefits/create-benefit/benefit name.png"/>
+    <img src="/images/benefits/create-benefit/benefit name.avif"/>
   </Step>
   <Step title="Add benefit details">
     Select the reward type, instructions for redemption, text that will be displayed upon claiming it (for generic reveal option only), and price.
@@ -65,7 +65,7 @@ title: 'Creating a Benefit'
     Select a payment option if applicable. Moongate supports both credit cards and crypto options. **Please contact us if you will be collecting payment for your event.**
     <img src= "/images/benefits/create-benefit/payment.png"/>
   </Step>
-  <Step title="Launch Your Benefit">
+  <Step title="Launch your benefit campaign and benefit(s)">
     Once you have finalized your event and ticket details, click "Publish" to launch your benefit campaign.
   </Step>
 </Steps>
