--- a/creating-campaign/ticketing/gating.mdx
+++ b/creating-campaign/ticketing/gating.mdx
@@ -38,6 +38,13 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
                     </Step>
                 </Steps>
             </Accordion>
+            <Tip>
+                A ticket can be gated by multiple NFT collections (i.e a purchaser must own an NFT from **at least one** of the applicable collections). Simply click 'Add Collection' and repeat the above process to add an additional collection.
+            </Tip>
+            <Tip>
+                Tickets can be gated so that a purchaser must own an NFT from **every** applicable collection to unlock it.
+                <img src="images/creating-campaign/ticketing/gating/require all collections.png"/>
+            </Tip>
         </Step>
     </Steps>
   </Accordion>
