--- a/benefits/gating.mdx
+++ b/benefits/gating.mdx
@@ -57,6 +57,14 @@ Merchants can restrict the ability to claim a benefit to specified people only, 
                     </Step>
                 </Steps>
             </Accordion>
+            <Tip>
+                A ticket can be gated by multiple NFT collections (i.e a purchaser must own an NFT from **at least one** of the specified collections). Simply click 'Add Collection' and repeat the above process to add an additional collection.
+                <img src="/images/benefits/gating/add collection.png"/>
+            </Tip>
+            <Tip>
+                Tickets can be gated so that a purchaser must own an NFT from **every** specified collection to unlock it.
+                <img src="/images/benefits/gating/require all collections.png"/>
+            </Tip>
         </Step>
     </Steps>
   </Accordion>
