--- a/creating-campaign/ticketing/gating.mdx
+++ b/creating-campaign/ticketing/gating.mdx
@@ -39,10 +39,11 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
                 </Steps>
             </Accordion>
             <Tip>
-                A ticket can be gated by multiple NFT collections (i.e a purchaser must own an NFT from **at least one** of the applicable collections). Simply click 'Add Collection' and repeat the above process to add an additional collection.
+                A ticket can be gated by multiple NFT collections (i.e a purchaser must own an NFT from **at least one** of the specified collections). Simply click 'Add Collection' and repeat the above process to add an additional collection.
+                <img src="/images/creating-campaign/ticketing/gating/add collection.png"/>
             </Tip>
             <Tip>
-                Tickets can be gated so that a purchaser must own an NFT from **every** applicable collection to unlock it.
+                Tickets can be gated so that a purchaser must own an NFT from **every** specified collection to unlock it.
                 <img src="/images/creating-campaign/ticketing/gating/require all collections.png"/>
             </Tip>
         </Step>
