--- a/benefits/createbenefit.mdx
+++ b/benefits/createbenefit.mdx
@@ -44,13 +44,16 @@ title: 'Creating a Benefit'
         </Tab>
     </Tabs>
   </Step>
-  <Step title="Specify advanced options (Optional)">
-    If applicable, specify the maximum number of available tickets of this ticket type, as well as whether the 
-    ticket type should be invisible to users on the event page.
-    <img src= "/images/benefits/create-benefit/advance toggle.png"/>
+  <Step title="Gate benefit by NFT">
     <Info>
-        To gate benefits by NFT ownership or Email/Wallet addresses, please refer to [this guide](/benefits/gating).
+        Unlike tickets or membership passes, benefits **must** be gated by NFT ownership (including prior events ticketed by/membership programs
+        administered by Moongate). Please refer to [this guide](/benefits/gating) for instructions on gating by NFT.
     </Info>
+  </Step>
+  <Step title="Specify advanced options (Optional)">
+    If applicable, specify advanced options such as limited quantity, whether users can redeem the benefit multiple times, whether users must
+    hold a promo code to unlock this benefit, etc.
+    <img src= "/images/benefits/create-benefit/advance toggle.png"/>
     When you are ready, click "Save" to close the Benefit Option window, then click "Next."
   </Step>
   <Step title="Add questions (Optional)">
@@ -58,14 +61,14 @@ title: 'Creating a Benefit'
     If desired, add questions to collect information from users who are joining your benefit campaign. These questions 
     will be shown to users during checkout.
     <img src= "/images/benefits/create-benefit/Qs.webp"/>
-    Responses can be viewed from the event's Sales tab, located in the event dashboard.
+    Responses can be viewed from the benefit campaign's Sales tab, located in the campaign's dashboard.
     <img src= "/images/benefits/create-benefit/responses.gif"/>
   </Step>
   <Step title="Specify payment options">
-    Select a payment option if applicable. Moongate supports both credit cards and crypto options. **Please contact us if you will be collecting payment for your event.**
+    Select a payment option if applicable. Moongate supports both credit cards and crypto options. **Please contact us if you will be collecting payment for your benefit campaign.**
     <img src= "/images/benefits/create-benefit/payment.png"/>
   </Step>
   <Step title="Launch your benefit campaign and benefit(s)">
-    Once you have finalized your event and ticket details, click "Publish" to launch your benefit campaign.
+    Once you have finalized your benefit campaign and benefit details, click "Publish" to launch your benefit campaign.
   </Step>
 </Steps>
