--- a/benefits/gating.mdx
+++ b/benefits/gating.mdx
@@ -3,16 +3,18 @@ title: 'Gating by NFT/Email/Wallet'
 description: 'Limit benefits to a group of specified users'
 ---
 
-Merchants can restrict the ability to claim a benefit to specified people only, allowing vendors to offer exclusive value to customers. For benefits, eligibility to claim a benefit **must** be determined by ownership of certain NFT collections.
+Merchants can restrict the ability to claim a benefit to specified people only, allowing vendors to offer exclusive value to customers. 
+Unlike tickets or membership passes, eligibility to claim a benefit **must** be determined by ownership of an NFT within specified collections (i.e gating is mandatory.)
 
 <AccordionGroup>
   <Accordion title="Gating by NFT">
     <Steps>
         <Step title="Select NFT Collection to Gate By">
-            If you have hosted an event that was ticketed by or created a membership program on Moongate, we have made it easy for you to NFT-gate by your events and membership tiers. Simply select "Your Collection" from the "Type" field.
-            <img src="/images/creating-campaign/ticketing/gating/Your Collection Toggle.png"/>
+            In the target benefit campaign page, navigate to the benefit's edit panel and locate the 'Gated by NFT' section.
+
+            If you have hosted an event that was ticketed/created a membership program administered by Moongate, simply select "Your Collection" from the "Type" field.
+            <img src="/images/creating-campaign/ticketing/gating/your collection toggle.png"/>
             <Accordion title="Your Collection">
-                <img src="/images/creating-campaign/ticketing/gating/NFT Gate Toggle.png"/>
                 <Steps>
                     <Step title="Select the target event/membership program from the 'NFT Collection' field.">
                     </Step>
@@ -22,7 +24,7 @@ Merchants can restrict the ability to claim a benefit to specified people only, 
                 </Steps>
             </Accordion>
             If you are gating by an external NFT collection, select "Other Collection."
-            <img src="/images/creating-campaign/ticketing/gating/Other Collection Toggle.png"/>
+            <img src="/images/creating-campaign/ticketing/gating/other collection toggle.png"/>
             <Accordion title="Other Collection">
                 <img src="/images/creating-campaign/ticketing/gating/Select Network.gif"/>
                 <Steps>
